@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.ibissource</groupId>
+	<groupId>org.frankframework</groupId>
 	<artifactId>ibis-adapterframework-parent</artifactId>
 	<version>${revision}</version>
 	<packaging>pom</packaging>
@@ -39,7 +39,7 @@
 		<mssql.driver.version>12.4.2.jre11</mssql.driver.version>
 		<mysql.driver.version>8.2.0</mysql.driver.version>
 		<!-- Should upgrade to new MariaDB driver 3.1.4, 3.2.0 or newer for JDK17 support but currently not working with XA transaction managers in the framework. -->
-		<mariadb.driver.version>3.3.1</mariadb.driver.version>
+		<mariadb.driver.version>3.3.2</mariadb.driver.version>
 		<postgresql.driver.version>42.7.1</postgresql.driver.version>
 		<mongodb.driver.version>4.11.1</mongodb.driver.version>
 
@@ -141,148 +141,148 @@
 			<!-- End Lock transient deps -->
 
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-commons</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-security</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>iaf-management-gateway</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-core</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>credentialprovider</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-tibco</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-sap</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-messaging</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-larva</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-akamai</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-cmis</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-console</artifactId>
 				<version>${project.version}</version>
 				<type>pom</type>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-console-frontend</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-console-backend</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-console-webapp</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-webapp</artifactId>
 				<version>${project.version}</version>
 				<type>war</type>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-ear</artifactId>
 				<version>${project.version}</version>
 				<type>ear</type>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-test</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-test-integration</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-idin</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-ladybug</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-aspose</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-aws</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-dbms</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>nn-specials</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>ibis-adapterframework-batch</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 
 
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>bundle-minimal</artifactId>
 				<version>${project.version}</version>
 				<type>pom</type>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>bundle-full</artifactId>
 				<version>${project.version}</version>
 				<type>pom</type>
@@ -656,7 +656,7 @@
 					<excludes>
 						<exclude>it.**</exclude>
 					</excludes>
-					<argLine>@{argLine} -Dfile.encoding=CP-1252 --illegal-access=permit</argLine>
+					<argLine>@{argLine} -Dfile.encoding=CP-1252 --illegal-access=permit --add-opens java.base/java.io=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -796,7 +796,7 @@
 							<configuration>
 								<property>iaf.rootdir</property>
 								<project>
-									<groupId>org.ibissource</groupId>
+									<groupId>org.frankframework</groupId>
 									<artifactId>ibis-adapterframework-parent</artifactId>
 								</project>
 							</configuration>
@@ -1386,7 +1386,7 @@
 								<additionalOption>-digesterRulesPath</additionalOption>
 								<additionalOption>${project.basedir}/core/src/main/resources/digester-rules.xml</additionalOption>
 								<additionalOption>-rootClass</additionalOption>
-								<additionalOption>nl.nn.adapterframework.configuration.Configuration</additionalOption>
+								<additionalOption>org.frankframework.configuration.Configuration</additionalOption>
 								<additionalOption>-frankFrameworkVersion</additionalOption>
 								<additionalOption>${project.version}</additionalOption>
 							</additionalOptions>
